<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/web_development"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:text="Web Development"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heading_web_development"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/web_development"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_web_development"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:fontFamily="sans-serif" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/mobile_app_development"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:text="SOFTWARE QUALITY ASSURANCE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heading_sqa"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/sqa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_sqa"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/sqa"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:text="MOBILE APP DEVELOPMENT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heading_mobile_development"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/mobile_development"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_mobile_development"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:textAlignment="center" />

</LinearLayout>